// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clean normalize input 1`] = `
Array [
  Object {
    "annee": 4150,
    "civilite": "n",
    "code_postal": 57100,
    "date_ouverture": "2017-11-02",
    "numero_dossier": "RG20136Q",
    "residence": "A domicile",
    "type": "Tutelle",
    "ville": "thionville",
  },
  Object {
    "annee": 4000,
    "civilite": "n",
    "code_postal": 75005,
    "date_ouverture": "2016-12-03",
    "numero_dossier": "1236HPLY",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "paris",
  },
  Object {
    "annee": 4500,
    "civilite": "n",
    "code_postal": 85000,
    "date_ouverture": "2010-08-05",
    "numero_dossier": "meourg120",
    "residence": "A domicile",
    "type": "Sauvegarde de justice",
    "ville": "marseille",
  },
]
`;

exports[`read: rename columns should rename approximative columns 1`] = `
Array [
  Object {
    "annee": 2000,
    "civilite": undefined,
    "date_ouverture": "2018-12-10",
    "type": "Curatelle",
  },
  Object {
    "annee": 2010,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
    "type": "Sauvegarde de justice",
  },
  Object {
    "annee": 1998,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
    "type": "Mesure ad hoc",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "1999-05-22",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "1989-09-22",
  },
]
`;

exports[`read: rename columns should rename approximative columns 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`valid civilites should normalize civilites 1`] = `
Array [
  Object {
    "annee": 2000,
    "civilite": "H",
    "date_ouverture": "2018-12-10",
    "type": "Curatelle",
  },
  Object {
    "annee": 2010,
    "civilite": "H",
    "date_ouverture": "2010-05-22",
  },
  Object {
    "civilite": "F",
    "date_ouverture": "2010-05-22",
    "type": "Sauvegarde de justice",
  },
  Object {
    "annee": 1998,
    "civilite": "F",
    "date_ouverture": "2010-05-22",
    "type": "Mesure ad hoc",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "1999-05-22",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "1989-09-22",
  },
]
`;

exports[`valid civilites should normalize civilites 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`validate: invalid data should fail invalid-annee.xlsx should be invalid 1`] = `
Array [
  Object {
    "annee": 2000,
    "civilite": undefined,
    "date_ouverture": "2018-12-10",
    "type": "Curatelle",
  },
  Object {
    "annee": 4000,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
  },
]
`;

exports[`validate: invalid data should fail invalid-annee.xlsx should be invalid 2`] = `
Object {
  "errors": Object {
    "Ligne 3": Array [
      "Année non valide : \\"4000\\"",
    ],
  },
}
`;

exports[`validate: invalid data should fail invalid-date.xlsx should be invalid 1`] = `
Array [
  Object {
    "civilite": undefined,
    "date_ouverture": "2015-12-25",
    "type": "Curatelle",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "Invalid Date",
    "type": "Tutelle",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
    "type": "Tutelle",
  },
]
`;

exports[`validate: invalid data should fail invalid-date.xlsx should be invalid 2`] = `
Object {
  "errors": Object {
    "Ligne 3": Array [
      "Date d'ouverture non valide : \\"Invalid Date\\"",
    ],
  },
}
`;

exports[`validate: valid data should NOT fail valid1.xlsx should be valid 1`] = `
Array [
  Object {
    "annee": 2000,
    "civilite": undefined,
    "date_ouverture": "2018-12-10",
    "type": "Curatelle",
  },
  Object {
    "annee": 2010,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
  },
  Object {
    "annee": 1998,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "1999-05-22",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "1989-09-22",
  },
]
`;

exports[`validate: valid data should NOT fail valid1.xlsx should be valid 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`validate: valid data should NOT fail valid2.xlsx should be valid 1`] = `
Array [
  Object {
    "annee": 2003,
    "civilite": "H",
    "code_postal": 57100,
    "date_ouverture": "2017-11-02",
    "numero_dossier": "RG20136Q",
    "residence": "A domicile",
    "type": "Tutelle",
    "ville": "thionville",
  },
  Object {
    "annee": 2004,
    "civilite": "H",
    "code_postal": 75005,
    "date_ouverture": "2016-12-03",
    "numero_dossier": "1236HPLY",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "paris",
  },
  Object {
    "annee": 2009,
    "civilite": "F",
    "code_postal": 85000,
    "date_ouverture": "2010-08-05",
    "numero_dossier": "meourg120",
    "residence": "A domicile",
    "type": "Sauvegarde de justice",
    "ville": "marseille",
  },
]
`;

exports[`validate: valid data should NOT fail valid2.xlsx should be valid 2`] = `
Object {
  "errors": undefined,
}
`;
